# libgkr4gpu

./: .gitignore  CMakeLists.txt  README.md  example.cpp
lib/: datatypes.h  fircoeffcache.cpp  fircoeffcache.h  olasgpu.cpp  olasgpu.h  olasgpuchannel.cpp  olasgpuchannel.h
lib/cuda/: zero.cu  zero.h
